--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -10,5 +10,8 @@
   "settings": "समायोजन",
   "signout": "साइन आउट",
   "total_savings": "कुल बचत",
-  "total_orders": "कुल अनुरोध"
+  "total_orders": "कुल अनुरोध",
+  "response": "प्रतिक्रिया",
+  "chat": "चैट",
+  "my_services": "मेरी सेवा"
 }
