--- a/assets/translations/te-IN.json
+++ b/assets/translations/te-IN.json
@@ -10,5 +10,8 @@
   "settings": "సెట్టింగ్‌లు",
   "signout": "సైన్ అవుట్",
   "total_savings": "మొత్తం పొదుపులు",
-  "total_orders": "మొత్తం ఆర్డర్లు"
+  "total_orders": "మొత్తం ఆర్డర్లు",
+  "response": "రెస్పాన్స్",
+  "chat": "చాట్",
+  "my_services": "మై సర్వీసెస్"
 }
