--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -10,6 +10,9 @@
     "settings":"Settings",
     "signout":"Sign Out",
     "total_savings":"Total Savings",
-    "total_orders":"Total Orders"
+    "total_orders":"Total Orders",
+    "response":"Response",
+    "chat":"Chat",
+    "my_services":"My Services"
 
  }
