--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -13,5 +13,6 @@
   "total_orders": "कुल अनुरोध",
   "response": "प्रतिक्रिया",
   "chat": "चैट",
-  "my_services": "मेरी सेवा"
+  "my_services": "मेरी सेवा",
+  "become_a_service_partner": "एक सेवा भागीदार बनें"
 }
