--- a/assets/translations/te-IN.json
+++ b/assets/translations/te-IN.json
@@ -13,5 +13,6 @@
   "total_orders": "మొత్తం ఆర్డర్లు",
   "response": "రెస్పాన్స్",
   "chat": "చాట్",
-  "my_services": "మై సర్వీసెస్"
+  "my_services": "మై సర్వీసెస్",
+  "become_a_service_partner": "సేవా భాగస్వామి అవుతారు"
 }
