fixed bugs in profile screen and partner list,store andd chat pages

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -9,7 +9,7 @@
   "feedback": "Feedback",
   "settings": "Settings",
   "signout": "Sign Out",
-  "total_savings": "Total Savings",
+  "total_savings": "Total Spendings",
   "total_orders": "Total Orders",
   "response": "Response",
   "chat": "Chat",
