--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -9,7 +9,7 @@
   "feedback": "प्रतिपुष्टि",
   "settings": "समायोजन",
   "signout": "साइन आउट",
-  "total_savings": "कुल बचत",
+  "total_savings": "कुल खर्च",
   "total_orders": "कुल अनुरोध",
   "response": "प्रतिक्रिया",
   "chat": "चैट",
