--- a/assets/translations/te-IN.json
+++ b/assets/translations/te-IN.json
@@ -9,7 +9,7 @@
   "feedback": "మీ అభిప్రాయం",
   "settings": "సెట్టింగ్‌లు",
   "signout": "సైన్ అవుట్",
-  "total_savings": "మొత్తం పొదుపులు",
+  "total_savings": "మొత్తం ఖర్చులు",
   "total_orders": "మొత్తం ఆర్డర్లు",
   "response": "రెస్పాన్స్",
   "chat": "చాట్",
